# grpc-test-project1

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  deps.bzl  go.work  go.work.sum  versions.bzl
client/: go.mod
client/cmd/: BUILD.bazel  main.go
client/internal/controller/client/: controller.go
proto/: go.mod
proto/dummy/v1/: BUILD.bazel  dummy.proto
proto/todo/v1/: todo.pb.go  todo.proto  todo_grpc.pb.go
server/: go.mod
server/cmd/: BUILD.bazel  main.go
server/internal/controller/: controller.go
server/internal/handler/: db.go
server/internal/repository/memory/: memory.go
